🩹 Finalizando estrutura mobile

--- a/criamos.html
+++ b/criamos.html
@@ -17,7 +17,7 @@
 
   <body class="criamos md:h-screen md:overflow-y-hidden">
     <header
-      class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
+      class="fixed h-48 md:h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
       <div>
         <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
@@ -377,7 +377,7 @@
     </main>
     <!-- Mobile container -->
     <div class="max-w-full pt-32 flex justify-end flex-col md:hidden">
-      <div class="px-8 row-start-3 pb-8">
+      <div class="px-8 row-start-3 pb-8 pt-8">
         <h1 class="text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title mb-3">criamos</h1>
       </div>
       <div class="w-full">
