--- a/single_work.html
+++ b/single_work.html
@@ -17,14 +17,10 @@
 
   <body class="h-screen home">
     <header
-      class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
+      class="fixed h-48 md:h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
       <div>
-        <a
-          href="./index.html#capicce"
-          class="cursor-pointer pointer-events-auto"
-          id="logo"
-        >
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
           <!-- Logo -->
           <svg
             width="64"
@@ -62,18 +58,14 @@
             </defs>
           </svg>
         </a>
-        <a
-          href="work.html"
-          class="cursor-pointer pointer-events-auto mt-5"
-          id="page-back-nagivation"
-        >
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto mt-5 hidden md:block" id="page-back-nagivation">
           <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="53"
-            height="16"
-            viewBox="0 0 53 16"
-            fill="currentColor"
-            class="rotate-180 mt-5"
+          xmlns="http://www.w3.org/2000/svg"
+          width="53"
+          height="16"
+          viewBox="0 0 53 16"
+          fill="currentColor"
+          class="rotate-180 mt-5"
           >
             <g clip-path="url(#clip0_75_278)">
               <path
@@ -91,15 +83,15 @@
       </div>
 
       <!-- Social Icons -->
-      <div class="flex flex-row gap-4 items-center relative pr-12">
+      <div class="flex flex-row gap-4 items-center relative md:pr-12">
         <p class="text-2xl text-white">capricho</p>
-        <div class="mr-16">
+        <div class="mr-16 hidden md:block">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="2" viewBox="0 0 34 2" fill="currentColor">
             <path d="M0 1H34" stroke="currentColor"/>
           </svg>
         </div>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -116,7 +108,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -141,7 +133,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -160,7 +152,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -176,9 +168,6 @@
             />
           </svg>
         </a>
-        <div
-          class="swiper-pagination z-40 right-36 hidden sm:block pointer-events-auto"
-        ></div>
       </div>
     </header>
 
@@ -189,29 +178,29 @@
         <path d="M4.51376 32L9 27.1335L8.15135 26.2145L5.08591 29.5402L5.08592 -1.7109e-07L3.88536 -2.23568e-07L3.88536 29.5207L0.848649 26.2275L-1.32476e-06 27.1465L4.47426 32L4.49461 31.9792L4.51376 32Z" fill="#F5F5F5"/>
       </svg>
     </div>
-    <div class="flex flex-col items-center justify-center w-full py-64 bg-white text-center">
+    <div class="flex flex-col items-center justify-center w-full py-32 px-8 md:px-0 md:py-64 bg-white text-center">
         <p class="max-w-4xl">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         <p class="max-w-4xl">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         <p class="max-w-4xl">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         <p class="max-w-4xl">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
     </div>
-    <div class="flex flex-col items-center justify-center w-full bg-arms-black pt-40">
-        <img src="assets/imgs/cases_01/01.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/02.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/03.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/04.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/05.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/06.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/07.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/08.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/09.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/10.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/11.jpeg" class="w-[72%]" alt="">
-        <img src="assets/imgs/cases_01/12.jpeg" class="w-[72%]" alt="">
+    <div class="flex flex-col items-center justify-center w-full bg-arms-black md:pt-40">
+        <img src="assets/imgs/cases_01/01.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/02.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/03.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/04.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/05.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/06.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/07.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/08.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/09.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/10.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/11.jpeg" class="md:w-[72%]" alt="">
+        <img src="assets/imgs/cases_01/12.jpeg" class="md:w-[72%]" alt="">
     </div>
     <!-- Footer -->
-    <div class="grid bg-arms-white min-h-[14rem]" style="grid-template-columns: 14% auto 14%;">
-        <a href="" class="bg-arms-gray flex items-center justify-center">
+    <div class="flex flex-wrap md:grid bg-arms-white min-h-[14rem] single-work-footer">
+        <a href="" class="bg-arms-gray flex items-center justify-center order-1 md:order-none w-1/2 md:w-auto py-4 md:py-0">
             <div class="flex flex-col items-end">
                 <p class="text-xl">CUEPAS AÇAÍ</p>
                 <span>Brand Identity</span>
@@ -220,9 +209,8 @@
                 </svg>
             </div>
         </a>
-        <div class="flex items-center justify-center">
-            <div class="flex justify-center items-center flex-row gap-11">
-                
+        <div class="flex items-center justify-center  order-3 md:order-none w-full md:w-auto">
+            <div class="flex justify-center items-center flex-col md:flex-row gap-11 py-8 md:py-0">
                 <svg xmlns="http://www.w3.org/2000/svg" width="261" height="47" viewBox="0 0 261 47" fill="none">
                   <g clip-path="url(#clip0_557_310)">
                   <path d="M57.4639 47L83.3691 0L109.279 47H57.4639Z" fill="#201F1F"/>
@@ -237,10 +225,10 @@
                   </clipPath>
                   </defs>
                 </svg>
-                <div class="w-0 border-r border-r-arms-black" style="height:76px;"></div>
+                <div class="w-0 border-r border-r-arms-black hidden md:block" style="height:76px;"></div>
                 <div>
                     <span class="block mb-2">connect with us</span>
-                    <div class="flex flex-row gap-4 items-center relative pr-12 text-arms-black">
+                    <div class="flex flex-row gap-4 items-center relative md:pr-12 text-arms-black">
                       <a
                         class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
                         href=""
@@ -326,7 +314,7 @@
                 </div>
             </div>
         </div>
-        <a href="" class="bg-arms-gray flex items-center justify-center">
+        <a href="" class="bg-arms-gray flex items-center justify-center  order-2 md:order-none  w-1/2 md:w-auto py-4 md:py-0">
             <div class="flex flex-col items-start">
                 <p class="text-xl">ESG PIRACICABA</p>
                 <span>Brand Identity</span>
