--- a/work.html
+++ b/work.html
@@ -15,12 +15,12 @@
     <link href="./assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body class="h-screen home ">
+  <body class="h-screen home work">
     <header
-      class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
+      class="fixed h-48 md:h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
       <div>
-        <a href="./index.html#capricho" class="cursor-pointer pointer-events-auto" id="logo">
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
           <!-- Logo -->
           <svg
             width="64"
@@ -58,7 +58,7 @@
             </defs>
           </svg>
         </a>
-        <a href="index.html#capricho" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto mt-5 hidden md:block" id="page-back-nagivation">
           <svg
           xmlns="http://www.w3.org/2000/svg"
           width="53"
@@ -83,15 +83,15 @@
       </div>
 
       <!-- Social Icons -->
-      <div class="flex flex-row gap-4 items-center relative pr-12">
+      <div class="flex flex-row gap-4 items-center relative md:pr-12">
         <p class="text-2xl text-white">capricho</p>
-        <div class="mr-16">
+        <div class="mr-16 hidden md:block">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="2" viewBox="0 0 34 2" fill="currentColor">
             <path d="M0 1H34" stroke="currentColor"/>
           </svg>
         </div>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -108,7 +108,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -133,7 +133,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -152,7 +152,7 @@
           </svg>
         </a>
         <a
-          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
+          class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto hidden md:block"
           href=""
         >
           <svg
@@ -168,13 +168,10 @@
             />
           </svg>
         </a>
-        <div
-          class="swiper-pagination z-40 right-36 hidden sm:block pointer-events-auto"
-        ></div>
       </div>
     </header>
-    <!-- Screen 03 - Método -->
-    <div class="grid h-screen w-screen grid-rows-6 grid-cols-6 bg-arms-black">
+    <!-- Work desktop -->
+    <div class="h-screen w-screen grid-rows-6 grid-cols-6 bg-arms-black hidden md:grid">
         <!-- Header -->
         <div class="col-span-9 row-span-2"></div>
 
@@ -186,13 +183,13 @@
 
         <div class="grid col-span-6 grid-cols-4 row-span-3">
             <div class="col-span-3 bg-arms-light-gray">
-                <div class="swiper h-full" id="cards-wrapper">
+                <div class="h-full" id="cards-wrapper">
                   <!-- Additional required wrapper -->
-                  <div class="swiper-wrapper">
+                  <div class="grid grid-cols-3">
                     <!-- Slides -->
                     <a
                       href="single_work.html"
-                      class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+                      class="flex items-end justify-stretch cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                       <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
@@ -202,7 +199,7 @@
                     </a>
                     <a
                       href="single_work.html"
-                      class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+                      class="flex items-end justify-stretch cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                       <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
@@ -212,27 +209,7 @@
                     </a>
                     <a
                       href="single_work.html"
-                      class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
-                    >
-                      <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
-                      <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
-                        <h6 class="text-2xl">Brand Identity</h6>
-                        <span>LANEVO</span>
-                      </div>
-                    </a>
-                    <a
-                      href="single_work.html"
-                      class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
-                    >
-                      <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
-                      <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
-                        <h6 class="text-2xl">Brand Identity</h6>
-                        <span>LANEVO</span>
-                      </div>
-                    </a>
-                    <a
-                      href="single_work.html"
-                      class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+                      class="flex items-end justify-stretch cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                       <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
@@ -259,8 +236,84 @@
             </div>
         </div>
     </div>
+    <!-- Mobile -->
+    <div class="min-h-screen max-w-full pt-32 flex justify-end flex-col md:hidden">
+      <div class="px-8 row-start-3 pb-8 pt-8">
+        <h1 class="text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title mb-3">criamos</h1>
+      </div>
+      <div class="w-full">
+        <div class="swiper">
+          <div class="swiper-wrapper max-h-full">
+            <!-- Slides -->
+            <a
+              href="single_work.html"
+              class="h-64 flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+            >
+              <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
+              <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
+                <h6 class="text-2xl">Brand Identity</h6>
+                <span>LANEVO</span>
+              </div>
+            </a>
+            <a
+              href="single_work.html"
+              class="h-64 flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+            >
+              <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
+              <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
+                <h6 class="text-2xl">Brand Identity</h6>
+                <span>LANEVO</span>
+              </div>
+            </a>
+            <a
+              href="single_work.html"
+              class="h-64 flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
+            >
+              <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
+              <div class="px-8 py-7 pt-8 text-arms-white h-28 w-full bg-gradient-to-t from-arms-full-black to-transparent z-20">
+                <h6 class="text-2xl">Brand Identity</h6>
+                <span>LANEVO</span>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="w-full bg-arms-yellow relative">
+        <div class="swiper-pagination"></div>
+        <div class="flex flex-col gap-3 p-12 pt-20" id="card-title-wrapper">
+          <b class="text-2xl font bold text-arms-black">Loren Ipsun Title</b>
+          <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div class="flex flex-col w-full z-99" id="card-nagivation-wrapper">
+          <a href="./list_work.html" id="button-slide-prev" class="button bg-arms-white text-arms-black h-28">
+            <div>
+              VER TODOS
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="53"
+                height="16"
+                viewBox="0 0 53 16"
+                fill="currentColor"
+              >
+                <g clip-path="url(#clip0_75_278)">
+                  <path
+                    d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                    fill="currentColor"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_75_278">
+                    <rect width="53" height="16" fill="currentColor" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./assets/js/swiper_cases.js" type="module"></script>
+    <script src="./assets/js/swiper_work.js" type="module"></script>
     <script src="./assets/js/auto_anim_slide.js" type="module"></script>
     <!-- <script src="./assets/js/cards_cases.js" type="module"></script> -->
   </body>
